# AmazingQuant

./: .gitignore  LICENSE  LICENSE.md  README.md  constant.py  environment.py  plan.txt  requirements.txt
AmazingQuant/: __init__.py  constant.py  data_object.py  environment.py
AmazingQuant/analysis_center/: account_data.csv  deal_analysis.py  deal_data.csv  event_analysis_engine.py  event_backtesting_analysis.py  net_value_analysis.py  order_data.csv  performance_attribution_analysis.py  position_analysis.py  position_data.csv  show_result.py  strategy_analysis_report.py  trade_analysis.py  回测绩效分析报告.html
AmazingQuant/api_to_python/ctp/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
AmazingQuant/api_to_python/ctp/AQctpmd/AQctpmd/: AQctpmd.cpp  AQctpmd.h
AmazingQuant/api_to_python/ctp/AQctpmd/test/: TradingDay.con  mdtest.py
AmazingQuant/api_to_python/ctp/AQctptd/AQctptd/: AQctptd.cpp  AQctptd.h
AmazingQuant/api_to_python/ctp/AQctptd/test/: Private.con  Public.con  tdtest.py
AmazingQuant/config/: database_info.py  field_a_share_balance_sheet.txt  field_a_share_cash_flow.txt  field_a_share_ex_right_dividend.txt  field_a_share_income.txt  field_a_share_index_members.txt  field_a_share_profit_express.txt  field_a_share_profit_notice.txt  industry_class.py  local_data_path.py  security_type_config.py  stock_type_config.py  tgw_info.py
AmazingQuant/data_center/: financial_data_to_MongoDB.py  get_data.py  market_data_daily_to_MongoDB.py  mongo_connection.py  mongo_connection_me.py  mongo_connection_pm.py  mongosconn.py  singleton.py
AmazingQuant/event_engine/: __init__.py  base_test.py  event_analysis_engine.py  event_backtesting_analysis.py  event_bar_engine.py  event_broker_engine.py  event_deal.py  event_engine_base.py  event_log.py  event_market.py  event_mission_engine.py  event_order.py  event_risk_management.py  event_save_record.py  event_trade_engine.py
AmazingQuant/factor_center/: __init__.py  cal_factor.py  factor_ma.py  indicator_ma.py  (+2 more)
documents/: MongoDB_config.md  redis_conf  template.py
example/: example_strategy.py  tes_strategy.py  test_strategy.py  test_strategy_account_data1530494369000.csv  test_strategy_deal_data1530494369000.csv  test_strategy_order_data1530494369000.csv  test_strategy_position_data1530494369000.csv  test_strategy_strategy backtesting indicator1530494371000.html
my_test/: __init__.py  clickhouse_test.py  plotly_test.py  pyecharts_test.py  pyqt_test.py  pyqtgraph_test.py  redis_test.py  statsmodels_test.py  template_test.py
test/: pyqt_test.py  pytorch.py  redis_test.py  statsmodels_test.py  tushare_test.py
(+450 files in other folders)
